# ros-stage-simulation

devel/: .catkin  .rosinstall  setup.sh
devel/lib/line_follower/: line_follower
devel/lib/my_stage/: stopper
devel/lib/pd_controller/: pd_controller
devel/lib/pid_controller/: pid_controller
devel/lib/pkgconfig/: beginner_tutorials.pc  line_follower.pc  my_stage.pc  pd_controller.pc  pid_controller.pc  stage_package.pc
devel/lib/stage_package/: stage_exe
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/line_follower/cmake/: line_followerConfig.cmake
devel/share/my_stage/cmake/: my_stageConfig.cmake
devel/share/pd_controller/cmake/: pd_controllerConfig.cmake
devel/share/pid_controller/cmake/: pid_controllerConfig.cmake
devel/share/stage_package/cmake/: stage_packageConfig.cmake
hw2_stage-world/: 2017-02-11-00-31-57.world  tutorial.inc
src/line_follower/: CMakeLists.txt
src/line_follower/src/: line_follower.cpp  line_follower.h  line_following.cpp  working_line_follower.cpp
src/my_stage/: CMakeLists.txt
src/my_stage/launch/: my_stage.launch
src/my_stage/src/: run_stopper.cpp  stopper.cpp  stopper.h
src/pd_controller/: CMakeLists.txt  README  package.xml
src/pd_controller/src/: pd_controller.cpp  pd_controller.h
src/pid_controller/: CMakeLists.txt  README
src/pid_controller/src/: pid_controller.cpp  pid_controller.h
src/stage_package/: CMakeLists.txt  package.xml
src/stage_package/src/: stage_header.h  stage_source.cpp
stage-world/: squares.world
