cmake_minimum_required(VERSION 2.8.3)
project(line_follower)

find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  sensor_msgs
  geometry_msgs
)

catkin_package(
  CATKIN_DEPENDS roscpp rospy std_msgs sensor_msgs geometry_msgs
)

include_directories(
  ${catkin_INCLUDE_DIRS}
)

add_executable(line_follower src/line_follower.cpp)

target_link_libraries(line_follower ${catkin_LIBRARIES})

