<?xml version="1.0"?>
<package>
  <name>pd_controller</name>
  <version>0.0.0</version>
  <description>Wall Follower using PD controller for assignment 2</description>

  <maintainer email="aman@email.sc.edu">aman sharma</maintainer>

  <license>FreeBSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
